gccida/g1/recog_20
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25482:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25541:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v73; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25545:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v74; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25556:52: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = -( ix86_binary_operator_ok( PLUS, DImode, recog_data_0.operand) == 0); 
                                                   ^~~~~~~~~~~~
                                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25614:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v15; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25618:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v16; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25619:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v17.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25633:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v16; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25644:52: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = -( ix86_binary_operator_ok( PLUS, DImode, recog_data_0.operand) == 0); 
                                                   ^~~~~~~~~~~~
                                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25654:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v21; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25678:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v81; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25689:53: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = -( ix86_binary_operator_ok( MINUS, DImode, recog_data_0.operand) == 0); 
                                                    ^~~~~~~~~~~~
                                                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25742:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = ( rtx)v22; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25743:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v23.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25757:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = ( rtx)v22; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25768:53: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = -( ix86_binary_operator_ok( MINUS, DImode, recog_data_0.operand) == 0); 
                                                    ^~~~~~~~~~~~
                                                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25778:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v39; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25779:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v40.rtwint = ( __int64)x0->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/insn-recog.c:25790:49: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( v86 = ix86_unary_operator_ok( NEG, DImode, recog_data_0.operand), result = 344, !v86) ) 
                                                ^~~~~~~~~~~~
                                                recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/recog_20/src/obj/insn-recog.o] Error 1
